latest modified plugin

--- a/loxbox/views/css/loxbox.css
+++ b/loxbox/views/css/loxbox.css
@@ -1,7 +1,7 @@
-.loxbox-content{
+/* .loxbox-content{
     font-size: 32px;
 
     display: block;
     width: 100%;
     text-align: center;
-}
+} */
