--- a/loxbox/views/css/style.css
+++ b/loxbox/views/css/style.css
@@ -20,12 +20,12 @@ body{
   color: #333;
   box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
 }
-.parent {
+/* .parent {
   display: block;
   position: relative;
   width: 100%;
   height: calc(100% - 25px);
-}
+} */
 .results {
     padding: 0;
     padding-left: 5px;
@@ -39,6 +39,7 @@ body{
     overflow-y: auto;
     float: left;
     max-height: 450px;
+    margin-top: 20px;
 }
 .mp {
   width: 40%;
@@ -115,4 +116,22 @@ label .input1{
 
 p{
   display: inline;
+}
+.panel-heading.active {
+  background-color: #809fff;
+}
+.custom-drop{
+  background-color: white;
+  width:180px;
+  height:25px;
+  border:1px;
+  outline:none;
+}
+.wrapper-customer{
+  /* display:inline-block; */
+  overflow:hidden;
+  background:white;
+  border-radius: 18px;
+  border:1px solid #cccccc;
+  margin-bottom: 20px;
 }
