--- a/loxbox/views/css/style.css
+++ b/loxbox/views/css/style.css
@@ -1,18 +1,45 @@
-
-body{
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    font-size: 14px;
-    color: #39464E;
-    overflow: auto;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  font-size: 14px;
+  color: #39464e;
+  overflow: auto;
 }
 #map {
   height: 500px;
+}
+
+.list {
+  position: relative;
+  width: 60%;
+  /* height: 100%; */
+  overflow-y: auto;
+  float: left;
+  max-height: 450px;
   margin-top: 20px;
-  margin: 0 auto;
+}
+.list-group-item:hover {
+  background-color: aliceblue;
+  cursor: pointer;
+}
+
+p {
+  display: inline;
+}
+.panel-heading.loxbox-active {
+  background-color: #809fff;
+}
+.custom-drop {
+  background-color: white;
+  width: 180px;
+  height: 25px;
+  border: 1px;
+  outline: none;
 }
 
 .leaflet-popup-content-wrapper {
@@ -20,38 +47,22 @@ body{
   color: #333;
   box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
 }
-/* .parent {
-  display: block;
-  position: relative;
-  width: 100%;
-  height: calc(100% - 25px);
-} */
-.results {
-    padding: 0;
-    padding-left: 5px;
-    height: calc(100% - 125px);
-    position: relative;
-}
-.list {
-    position: relative;
-    width: 60%;
-    height: 100%;
-    overflow-y: auto;
-    float: left;
-    max-height: 450px;
-    margin-top: 20px;
-}
-.mp {
-  width: 40%;
-  position: relative;
-  float: left;
-}
 
 .list-group-item:hover {
-    background-color: aliceblue ;
-    cursor: pointer;
+  background-color: aliceblue;
+  cursor: pointer;
+}
+.loxbox-active {
+  background-color: #809fff;
 }
 
+.leaflet-popup-content {
+  /* width: 200px; */
+  height: fit-content;
+}
+.td {
+  white-space: nowrap;
+}
 .header-label
 {
   color: #666;
@@ -61,47 +72,12 @@ body{
   padding: 3px;
   border-bottom: solid 1px #ddd;
 }
-.header-error
-{
-  color: #ff8c44;
-  display: none;
-  background: #ffede2;
-  border: solid 1px #ff8c44;
-  font-weight: 100;
-  padding: 4px;
+.panel-heading.active {
+  background-color: #74d578;
 }
-.search-header{
-  display: block;
-  margin: 0 auto;
-}
-label .input1{
-  display: inline-block;
-}
-.MR-Widget-Responsive .MRW-Search {
-  padding: 25px 10px 30px 95px;
-  text-align: left;
-  /* background: url(logo.png) no-repeat 15px 5px; */
-  white-space: nowrap;
-
-}
-.MR-Widget .MRW-Line {
-  display: block;
-  margin-bottom: 3px;
-  text-align: left;
-}
-.MR-Widget.MR-Widget-Responsive .MRW-Line .MRW-Container {
-  display: inline-block;
-  padding: 2px;
-
-}
-
-.button {
-  display: inline;
-}
-
 
 @media (max-width:768px) {
-  
+
   #map {
     display: none;
   }
@@ -109,29 +85,38 @@ label .input1{
   .list {
     width: 100%;
   }
+  
   .list >  p , label ,#button ,#cityInput, #zipInput {
     display: none;
   }
 }
 
-p{
-  display: inline;
+.image-logo {
+  float: left;
 }
-.panel-heading.active {
-  background-color: #809fff;
+
+.headingTwo {
+  float: left;
 }
-.custom-drop{
-  background-color: white;
-  width:180px;
-  height:25px;
-  border:1px;
-  outline:none;
+
+
+.list-group {
+
+  display: block !important;
+  margin-bottom: 20px !important;
 }
-.wrapper-customer{
-  /* display:inline-block; */
-  overflow:hidden;
-  background:white;
-  border-radius: 18px;
-  border:1px solid #cccccc;
-  margin-bottom: 20px;
+
+
+.list-group-item {
+  text-align: start !important;
+  padding: 10px 15px !important;
+  margin-bottom: -1px !important;
+
+
 }
+
+.list-group-item.active{
+
+  color: #fff !important;
+}
+
